<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redtop2"
    android:padding="16dp"
    tools:context=".Activities.Quiz.QuizActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="109dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="100dp"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/score_0"
        android:layout_marginTop="7dp"
        android:textColor="@color/colorBackground" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:freezesText="true"
        android:text="@string/question_fraction"
        android:textColor="@color/colorBackground" />

    <TextView
        android:id="@+id/text_view_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_question_count"
        android:freezesText="true"
        android:text="@string/category_name"
        android:textColor="@color/colorBackground" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:freezesText="true"
        android:text="@string/timer"
        android:textColor="@color/colorBackground"
        android:textSize="40sp"
        android:layout_marginTop="7dp" />

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_alignEnd="@+id/text_view_countdown"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="40dp"
        android:freezesText="true"
        android:text="@string/question_placeholder"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:freezesText="true"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:freezesText="true"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:freezesText="true"
            android:text="@string/option3" />

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:freezesText="true"
            android:text="@string/option4" />

    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_alignEnd="@+id/text_view_countdown"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/Transparent"
        android:freezesText="true"
        android:text="@string/confirm"
        android:textColor="@color/colorBackground"
        android:textSize="16sp" />

</RelativeLayout>