<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redtop3"
    android:padding="16dp"
    tools:context=".Activities.Quiz.QuizStartingScreenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="109dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="100dp"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/littleChef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:text="@string/quiz_name"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_view_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="17dp"
        android:text="@string/high_score_0"
        android:textColor="@color/colorBackground"
        android:textSize="17sp" />

    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="268dp"
        android:layout_height="78dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="-6dp"
        android:layout_marginBottom="235dp"
        android:text="@string/start_quiz"
        android:textColor="@color/colorBackground"
        android:background="@drawable/buttonshape2"
        />

    <Button
        android:id="@+id/instructions"
        android:layout_width="268dp"
        android:layout_height="80dp"
        android:layout_alignEnd="@+id/littleChef"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-6dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/buttonshape2"
        android:text="@string/instructions"

        android:textColor="@color/colorBackground" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/littleChef"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp" />

</RelativeLayout>