<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/redtop"
    tools:context=".Activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learning_hub"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_title"
                android:layout_marginTop="6dp"
                android:text="@string/home_subheading"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/circle" />

        </RelativeLayout>

        <GridLayout
            android:columnCount="1"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/recipe_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="6sp"
                app:cardCornerRadius="12dp"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="30dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/recipe"
                        android:layout_width="60dp"
                        android:layout_height="60dp" />

                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/first_activity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/quiz_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="6sp"
                app:cardCornerRadius="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="30dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/exam"
                        android:layout_width="60dp"
                        android:layout_height="60dp" />

                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/second_activity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/random_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="6sp"
                app:cardCornerRadius="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="30dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/mystery"
                        android:layout_width="60dp"
                        android:layout_height="60dp" />

                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/third_activity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </GridLayout>

    </LinearLayout>

</ScrollView>

