<?xml version="1.0" encoding="utf-8"?>

<!--code for vectors modified from https://www.youtube.com/watch?v=yhCZMsVRjcM to suit the application-->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainCategory.MainCategoryActivity">

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">
        <RelativeLayout
            android:id="@+id/headerView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@id/title"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cardSearch"
                android:layout_below="@id/title"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimaryDark">
                <android.support.design.widget.TextInputLayout
                    android:theme="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/search_field"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/search_icon"
                    android:gravity="center_vertical"
                    android:hint="@string/search_recipe"
                    android:padding="10dp"
                    android:singleLine="false"
                    android:textColor="@color/colorPrimaryLight" />
                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerHeader"
                android:layout_below="@id/cardSearch"
                android:foregroundGravity="center"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

            <TextView
                android:id="@+id/titleCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewPagerHeader"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/meal_categories"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerCategory"
                android:layout_below="@id/titleCategory"
                android:scrollbars="none"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>